--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "i18next-xhr-backend": "^3.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^4.6.2",
     "react-i18next": "^11.3.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
