--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "http-server": "^0.12.1",
     "i18next": "^19.0.3",
     "i18next-xhr-backend": "^3.2.2",
+    "jsonwebtoken": "^8.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hook-form": "^4.6.2",
